# enclave

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
db-scripts/: 001-create-db-seed.sql
enclave/api/: main.py
enclave/api/routes/: secrets.py
enclave/cli/: cli.py
enclave/core/: enclave_secret_manager.py
enclave/core/encryption/: __init__.py  aes.py
enclave/core/tests/: conftest.py  test_core.py  test_encryption.py
enclave/shared/: database.py  redis_client.py
enclave/shared/models/: secret.py  secret_version.py
services/api/: pyproject.toml
services/core/: database.py  pyproject.toml
services/core/enclave_core/: core.py
services/core/enclave_core/encryption/: __init__.py  aes.py  base.py
services/core/tests/: test_encryption.py
shared/models/: encryption_algorithm.py  secret.py  secret_version.py
