[tool.poetry]
name = "enclave"
version = "0.1.0"
description = "A project for managing secrets with a core library and API."
authors = ["Ankit Juneja <dev.ankitjuneja@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^43.0.1"
sqlalchemy = "^2.0.34"
pytest = "^8.3.2"
loguru = "^0.7.2"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"