[tool.poetry]
name = "enclave"
version = "0.1.0"
description = "A project for managing secrets with a core library and API."
authors = ["Ankit Juneja <dev.ankitjuneja@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^43.0.1"
sqlalchemy = "^2.0.34"
pytest = "^8.3.2"
loguru = "^0.7.2"
psycopg2 = "^2.9.9"
pydantic = "^2.9.0"
click = "^8.1.7"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"

[tool.poetry.scripts]
enclave-cli = "enclave.cli.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"